force-app/main/default/objects/Sharat_Sushma_Student_c__x/Sharat_Sushma_Student_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>My_another_DE_Org</externalDataSource>
    <externalName>Sharat_Sushma__Student__c</externalName>
    <label>Student</label>
    <pluralLabel>students</pluralLabel>
</CustomObject>