force-app/main/default/objects/Sharat_Sushma_Student_c__x/fields/LastViewedDate__c.field-meta.xml
<CustomField>
    <fullName>LastViewedDate__c</fullName>
    <externalDeveloperName>LastViewedDate</externalDeveloperName>
    <label>Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>