force-app/main/default/objects/Sharat_Sushma_Student_c__x/fields/Sharat_Sushma_Email_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Email_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Email__c</externalDeveloperName>
    <label>Email</label>
    <type>Email</type>
</CustomField>