force-app/main/default/objects/Sharat_Sushma_Student_c__x/fields/Sharat_Sushma_Phone_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Sharat_Sushma_Phone_Number_c__c</fullName>
    <externalDeveloperName>Sharat_Sushma__Phone_Number__c</externalDeveloperName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>